--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
     "start": "electron-vite preview",
+    "start-server": "nodemon server.js",
     "dev": "electron-vite dev",
     "build": "electron-vite build",
     "postinstall": "electron-builder install-app-deps",
@@ -18,22 +19,37 @@
     "build:linux": "npm run build && electron-builder --linux"
   },
   "dependencies": {
+    "@cycjimmy/jsmpeg-player": "^6.0.5",
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
-    "electron-store": "^9.0.0"
+    "axios": "^1.7.2",
+    "cors": "^2.8.5",
+    "electron-store": "^9.0.0",
+    "express": "^4.19.2",
+    "fluent-ffmpeg": "^2.1.3",
+    "hls.js": "^1.5.9",
+    "node-media-server": "^2.7.0",
+    "node-rtsp-stream": "^0.0.9",
+    "react-player": "^2.16.0",
+    "react-router-dom": "^6.23.1",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "electron": "^28.2.0",
     "electron-builder": "^24.9.1",
     "electron-vite": "^2.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
+    "nodemon": "^3.1.2",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.0.12"
   }
 }
